; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_vdbeaux.c_sqlite3VdbeAddOp4Dup8.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_vdbeaux.c_sqlite3VdbeAddOp4Dup8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3VdbeAddOp4Dup8(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32* %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32* %5, i32** %13, align 8
  store i32 %6, i32* %14, align 4
  %16 = load i32*, i32** %8, align 8
  %17 = call i32 @sqlite3VdbeDb(i32* %16)
  %18 = call i8* @sqlite3DbMallocRawNN(i32 %17, i32 8)
  store i8* %18, i8** %15, align 8
  %19 = load i8*, i8** %15, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %21, label %25

21:                                               ; preds = %7
  %22 = load i8*, i8** %15, align 8
  %23 = load i32*, i32** %13, align 8
  %24 = call i32 @memcpy(i8* %22, i32* %23, i32 8)
  br label %25

25:                                               ; preds = %21, %7
  %26 = load i32*, i32** %8, align 8
  %27 = load i32, i32* %9, align 4
  %28 = load i32, i32* %10, align 4
  %29 = load i32, i32* %11, align 4
  %30 = load i32, i32* %12, align 4
  %31 = load i8*, i8** %15, align 8
  %32 = load i32, i32* %14, align 4
  %33 = call i32 @sqlite3VdbeAddOp4(i32* %26, i32 %27, i32 %28, i32 %29, i32 %30, i8* %31, i32 %32)
  ret i32 %33
}

declare dso_local i8* @sqlite3DbMallocRawNN(i32, i32) #1

declare dso_local i32 @sqlite3VdbeDb(i32*) #1

declare dso_local i32 @memcpy(i8*, i32*, i32) #1

declare dso_local i32 @sqlite3VdbeAddOp4(i32*, i32, i32, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
